--- a/qiskit_basics_bloch_sphere.ipynb
+++ b/qiskit_basics_bloch_sphere.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNFbQiLsPC8uLjPZ1RIe2Rb",
+      "authorship_tag": "ABX9TyNLaMNi1nGGmxFHHYs44NMS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +38,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n8KUXgOSscxU",
-        "outputId": "e9fca7ab-30ca-476f-e9e2-17c4436ae9de"
+        "outputId": "f7339ae9-da78-494b-a936-04e2da2ecf0c"
       },
-      "execution_count": 3,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,13 +68,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cwyKmJYZqnAq",
-        "outputId": "9173d6f7-45ab-4ff3-af73-c5d288d0c752"
+        "outputId": "d6e33dcc-d670-40ab-9dbd-e24a38840a15"
       },
       "outputs": [
         {
@@ -115,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Ze1pxh-qq7W",
-        "outputId": "ca77c3ed-8976-4c6a-94bb-35a262d5c095"
+        "outputId": "0d39b1dd-335d-4aa9-bbf8-5e80745688fc"
       },
-      "execution_count": 5,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "jUpz_LKiqzfn"
       },
-      "execution_count": 53,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -154,7 +154,7 @@
         "qr = QuantumRegister(1) #stores 1 qubit\n",
         "cr = ClassicalRegister(1) #stores 1 classical bit\n",
         "circuit = QuantumCircuit(qr, cr)\n",
-        "circuit.h(0)\n",
+        "circuit.h(0) #Runs through a Hadamard gate\n",
         "circuit.measure(qr,cr) #this creates a python object of a circuit"
       ],
       "metadata": {
@@ -162,19 +162,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aEdB97PJq4jT",
-        "outputId": "47b138d2-b3e5-41e7-e0f5-a52c02bef412"
+        "outputId": "59df6f76-718f-494e-dfcb-03c38a6e24f5"
       },
-      "execution_count": 54,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<qiskit.circuit.instructionset.InstructionSet at 0x7cc6358e6b30>"
+              "<qiskit.circuit.instructionset.InstructionSet at 0x7cc635694670>"
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 61
         }
       ]
     },
@@ -193,9 +193,9 @@
           "height": 38
         },
         "id": "KQKAnHC0rTO2",
-        "outputId": "b71c4307-11dc-48dd-ce67-74656743bf96"
+        "outputId": "52bca9a9-8aa5-4926-d892-18d6f5607193"
       },
-      "execution_count": 55,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -203,10 +203,10 @@
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ],
-            "text/latex": "$$\n\n\\begin{bmatrix}\n1 & 0  \\\\\n \\end{bmatrix}\n$$"
+            "text/latex": "$$\n\n\\begin{bmatrix}\n0 & 1  \\\\\n \\end{bmatrix}\n$$"
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 62
         }
       ]
     },
@@ -216,12 +216,12 @@
         "plot_bloch_multivector(statevector)"
       ],
       "metadata": {
-        "id": "CzMmgbY5B75N",
-        "outputId": "49df8bfb-1b8a-4f55-96f3-0dcb26559ae3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "CzMmgbY5B75N",
+        "outputId": "49df8bfb-1b8a-4f55-96f3-0dcb26559ae3"
       },
       "execution_count": 56,
       "outputs": [
